--- a/AI-Powered Delivery Project/AI-Powered Delivery Project.csproj
+++ b/AI-Powered Delivery Project/AI-Powered Delivery Project.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="testtss.cs" />
     <Compile Include="themecolor.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
