--- a/AI-Powered Delivery Project/AI-Powered Delivery Project.csproj
+++ b/AI-Powered Delivery Project/AI-Powered Delivery Project.csproj
@@ -67,11 +67,23 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="Forms\FormElectricalDevices.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="Forms\FormElectricalDevices.Designer.cs">
+      <DependentUpon>FormElectricalDevices.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormHome.Designer.cs">
+      <DependentUpon>FormHome.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormLaptops.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormLaptops.Designer.cs">
+      <DependentUpon>FormLaptops.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FormMobiles.cs">
       <SubType>Form</SubType>
@@ -79,14 +91,17 @@
     <Compile Include="Forms\FormMobiles.Designer.cs">
       <DependentUpon>FormMobiles.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FormPS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormPS.Designer.cs">
+      <DependentUpon>FormPS.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="themecolor.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormMobiles.resx">
       <DependentUpon>FormMobiles.cs</DependentUpon>
